// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders "Heading" with color prop 1`] = `
<h2
  class="sc-bdVaJa eGwGdc"
>
  Heading
</h2>
`;

exports[`renders "Heading" with large size 1`] = `
<h2
  class="sc-bdVaJa gJNZvU"
>
  Heading
</h2>
`;

exports[`renders "Heading" with no props 1`] = `
<h2
  class="sc-bdVaJa hcnaUU"
>
  Heading
</h2>
`;

exports[`renders "Heading" with small size 1`] = `
<h2
  class="sc-bdVaJa iYASYg"
>
  Heading
</h2>
`;

exports[`renders "Heading" with text align 1`] = `
<h2
  class="sc-bdVaJa jHlXIX"
>
  Heading
</h2>
`;
